--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <title>VAST MC1</title>
   <style>
-    body { margin: 0; background: black;}
+    html{
+      font-size:14px;
+    }
+    body { margin: 0; background: black;  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;}
     h1{
       background:none;
       color: white;
